# JackApps

./: .gitmodules  CMakeLists.txt  README.md  connect.sh
CaptureExample/: CMakeLists.txt  main.cpp
MultiDelay/: CMakeLists.txt  main.cpp
passthru/: CMakeLists.txt  delayline_reverse.h  main.cpp
synth440/: CMakeLists.txt  main.cpp
